fix menu z-index issue

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -574,7 +574,7 @@ div[class^='settings-menu-item-'] {
     right: 0px;
     height: 40px;
     overflow: hidden;
-    z-index: 11;
+    z-index: 9;
 }
 
 .app-menu-container-show {
@@ -606,7 +606,6 @@ div[class^='settings-menu-item-'] {
     display: grid;
     top: 41px;
     background-color: var(--secondary-bg-color);
-    border: 1px solid var(--main-border-color);
     border-bottom-left-radius: 10px;
     box-shadow: -1px 1px 3px var(--main-shadow-color);
     grid-template-rows: 0fr;
